--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     
+    <h1>Count Down</h1>
+
+    <div class="countDown"></div>
+
     <script src="./asset/js/script.js"></script>
 </body>
 </html>
